# jetacker-stack

./: README.md  docker-compose.core.yml  docker-compose.critics.yml  docker-compose.nav2-dev.yml  docker-compose.robot.yml  docker-compose.sim.yml  drive_nav2.py  drive_simple.py  run_matrix_suite.py  stack.py  stacks.yaml  tune_common.py  tune_mppi.py  tune_mppi_focused.py  tune_mppi_pareto.py
config/: health_check.yaml  health_check_jetacker.yaml  lidar_g4.yaml  tuning_params.yaml  tuning_params_pareto_v17.yaml  tuning_params_pareto_v18.yaml
config/common/: health_check.yaml  ros2_control.yaml
config/jetacker/: README.md  ekf.yaml  jetacker.urdf  nav2_params.yaml  slam_toolbox.yaml  tricycle_controller.yaml
config/jetacker/bt_trees/: navigate_w_replanning_slow.xml
config/slam_bot/: diff_drive_controller.yaml  ekf.yaml  nav2_params.yaml  slam_bot.urdf  slam_toolbox.yaml
dashboard/: .dockerignore  Dockerfile  README.md
dashboard/api/: host_api.py  main.py
dashboard/web/: index.html  package.json  playwright.config.ts  vite.config.ts
dashboard/web/src/: App.tsx  styles.css
dashboard/web/src/components/: BTStatus.tsx  DiagnosticsFeed.tsx  MppiTuning.tsx  Nav2StatusBadge.tsx
dashboard/web/src/hooks/: useRosBridge.ts  useServiceCall.ts  useTopic.ts
dashboard/web/src/types/: ros.ts
dashboard/web/src/utils/: time.ts
dashboard/web/tests/: mppi-tuning.spec.ts
docker/base/: Dockerfile  entrypoint.sh
docker/critics/: Dockerfile
docker/debug/: Dockerfile
docker/foxglove/: Dockerfile
docker/gazebo/: Dockerfile
docker/nav2/: Dockerfile
docker/overlay/: Dockerfile  entrypoint.sh
docker/scripts/: healthcheck_wrapper.sh
docker/x11-server/: Dockerfile  start-x11.sh
docs/: STEERING_FILTER.md
docs/architecture/: JETACKER_CONTROL.md  STACKS_YAML_DESIGN.md
driving_instructions/: calibrate_1m.yaml  calibrate_straight_line.yaml  calibrate_turn_180_ccw.yaml  calibrate_turn_180_cw.yaml  gym_loop.yaml  gym_loop_nav2.yaml  matrix_1_forward_straight.yaml  matrix_2_reverse_straight.yaml  matrix_3_forward_left_90.yaml  matrix_4_forward_right_90.yaml  matrix_5_reverse_left_90.yaml  matrix_6_reverse_right_90.yaml  matrix_7_forward_180.yaml  nav2_matrix_1_forward_straight.yaml  nav2_matrix_2_reverse_straight.yaml  nav2_matrix_3_forward_left_90.yaml  nav2_matrix_3_forward_left_90_obstacle.yaml  nav2_matrix_4_forward_right_90.yaml  nav2_matrix_5_reverse_left_90.yaml  nav2_matrix_6_reverse_right_90.yaml  nav2_matrix_7_forward_180.yaml  nav2_matrix_8_lateral_shift_right.yaml  singularity_3cycles.yaml  three_point_turn_180_ccw.yaml  three_point_turn_180_cw.yaml
logs/: extract_bag_timeline.py
logs/maps/: jetacker_gym_clean.data  jetacker_gym_clean.pgm  jetacker_gym_nav2.pgm  jetacker_gym_nav2.yaml
maps/: jetacker_gym_clean.yaml  jetacker_gym_nav2.pgm  jetacker_gym_nav2.yaml  map.pgm  map.yaml  map3.yaml
models/jetacker/: jetacker.urdf  jetacker.urdf.xacro  model.config  model.sdf  package.xml
models/live/: jetacker.urdf.xml
ros/: bag_recorder.py  bt_topology_publisher.py  check_tf_once.py  cmd_vel_relay.py  collision_calibrate.py  drive_test_runner.py  episode_metrics.py  gazebo_hardware_bridge.py  gazebo_obstacles.py  health_check.py  joint_state_merger.py  nav2_test_runner.py  nav2_waypoint_follower.py  passive_joint_publisher.py  reset_gates.py  sim_reset_runner.py  steering_filter.py  test_drive.py  test_steering_filter.py  tf_gate_checker.py
tests/: test_medoid.py
tools/: analyze_critics_bag.py  drive_utils.py  gen_urdf.py  nuke_trials.py  optuna_study_note.py  parse_mppi_logs.py  replicate_trial.py  reset_orchestrator.py  ros_snapshot.py  seed_study.py  study_analysis.py  subprocess_utils.py  verify_bag_metrics.py
workdir/gz_plugins/: build-gz-plugins.sh
workdir/gz_plugins/pose_publisher/: CMakeLists.txt  README.md
workdir/gz_plugins/pose_publisher/custom/: WorldPosePublisher.cc  WorldPosePublisher.hh
workdir/gz_plugins/pose_publisher/upstream/: PosePublisher.cc  PosePublisher.hh  PosePublisher_instrumented.cc
workdir/gz_plugins/world_state_publisher/: CMakeLists.txt  WorldStatePublisher.cc  WorldStatePublisher.hh  joint_reset.cc
workdir/scene_broadcaster_filter/: scene_pose_filter.py
worlds/jetacker/: jetacker.sdf  jetacker_bridge.yaml  jetacker_bridge_scene.yaml
worlds/slam/: slam_bot.sdf  slam_bot_sceneonly.sdf  slam_bridge.yaml  slam_bridge_scene.yaml
(+4 files in other folders)
